app/assets/stylesheets/form/_main-search.scss
// ---------------------------------------------------------------
//
//  Main search on startpage and in header on non-start pages
//
// ---------------------------------------------------------------


#new_search_form {
	@extend %clearfix;
	padding: 25px 0 0 25px;
	width: 640px;
	list-style: none;

	label {
		@extend %visually-hidden;
	}

	.template--pages-home & {
		position: relative;
		margin: 0 auto;
		padding: 30px 0 0;
		width: 780px;

		#search_form_query,
		#search_form_search_location,
		.main-search__submit {
			height: 50px;
		}

		#search_form_query,
		#search_form_search_location {
			width: 340px;
		}
	}

}

#search_form_query,
#search_form_search_location {
	margin-right: 10px;
	padding: 0 15px;
	font-size: 22px;
}

#search_form_query,
#search_form_search_location,
.main-search__submit {
	float: left;
	height: 47px;
}

.main-search__submit {
	display: block;
	width: 75px;
	background: $brand_brown image-url('ico_search.svg') no-repeat center center;
	color: transparent;
	text-shadow: none;
	font: 0/0 a;
}

#search_form_query {
	@extend %clarat_rounding_start;

	// explicit definition and using important to override twitter-typeahead
	&:focus {
		background: $brand_beige !important;
	}
}

.main-search__submit {
	@extend %clarat_rounding_end;
}

